Commit of the regress tool
git-svn-id: http://svn.silverstripe.com/modules/regress@32469 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -49,3 +49,13 @@ label.pass.selected {
 .failReason textarea {
 	width: 100%;
 }
+
+ul#FailureDetail {
+	padding: 0;
+}
+ul#FailureDetail li {
+	list-style-type: none;
+	border: 1px #CCC solid;
+	padding: 0.3em;
+	margin: 0.5em;
+}
