--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -22,6 +22,23 @@
 	background-color: #77DD44;
 }
 
+.steps .knownIssues {
+	margin-top: 0.5em;
+	padding: 0.3em;
+	background-color: #FFC;
+}
+.steps .knownIssues h4 {
+	margin: 0;
+}
+.steps .knownIssues li {
+	list-style-type: disc;
+	margin: 0;
+	padding: 0;
+	background-color: transparent;
+	border-style: none;
+}
+
+
 .passfail {
 	float: right;
 }
@@ -58,4 +75,12 @@ ul#FailureDetail li {
 	border: 1px #CCC solid;
 	padding: 0.3em;
 	margin: 0.5em;
+	background-color: #FFC;
+}
+ul#FailureDetail li.resolved {
+	background-color: #CFC;
+}
+
+.resolutionInfo {
+	font-size: 80%;
 }
