BUGFIX Namespaced typography to proper class
git-svn-id: http://svn.silverstripe.com/modules/regress@59287 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/typography.css
+++ b/trunk/css/typography.css
@@ -1,26 +1,28 @@
 /**
  * This typography file is included in the WYSIWYG editor
  */
-* {
+.typography * {
 	font-family: Arial;
 	font-size: 1em;
 
 }
-p, ul, td {
-	/*font-size: 1.2em;*/
+.typography p, 
+.typography ul, 
+.typography td {
+	font-size: 1.2em;
 }
 
-ul ul {
+.typography ul ul {
 	font-size: 1em;
 }
-h1 {
+.typography h1 {
 	font-size: 2em;
 	color: #0074C6;
 }
-h2 {
+.typography h2 {
 	font-size: 1.8em;
 	color: #0074C6;
 }
-a {
+.typography a {
 	color: #0066cc;
 }
