Alert when perform test window (popup) is blocked styled Result table item: hand cursor
git-svn-id: http://svn.silverstripe.com/modules/regress@62481 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -84,3 +84,8 @@ ul#FailureDetail li.resolved {
 .resolutionInfo {
 	font-size: 80%;
 }
+
+table.data tr td { 
+	cursor: hand;
+	cursor: pointer;
+}
