removed set resolve data where outcome is pass when saving the test plan changing pass color to yellow and resolved to green
git-svn-id: http://svn.silverstripe.com/modules/regress@62649 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -89,7 +89,7 @@ ul#NoteDetail li {
 	background-color: #FFC;
 }
 ul#NoteDetail li.pass {
-	background-color: #CFC;
+	background-color: #EBE4C6;
 }
 
 ul#NoteDetail li.fail {
@@ -98,6 +98,10 @@ ul#NoteDetail li.fail {
 
 ul#NoteDetail li.skip {
 	background-color: #ccc;
+}
+
+ul#NoteDetail li.resolved {
+	background-color: #CFC;
 }
 
 .resolutionInfo {
