MINOR: added new CSS styles for the test plan rendering.
git-svn-id: http://svn.silverstripe.com/modules/regress@97412 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -6,7 +6,6 @@
 	padding: 0;
 }
 .steps li {
-	list-style-type: none;
 	margin: 1em 0;
 	padding: 0.3em;
 	background-color: #EEE;
@@ -111,4 +110,50 @@ ul#NoteDetail li.resolved {
 table.data tr td { 
 	cursor: hand;
 	cursor: pointer;
+}
+
+# Added 07/01/2010 by Rainer Spittel
+
+ul#NoteDetail .content li {
+	border: none;
+	background-color: transparent;
+	list-style-type: decimal;
+	margin: 0px;
+}
+
+.content li {
+	border: none;
+	background-color: transparent;
+	margin: 0px;
+}
+
+ul#NoteDetail .label {
+	margin: 2px;'
+}
+
+ul#NoteDetail .content {
+	padding-left: 20px;'
+}
+
+.preparation {
+	border: 1px #CCC solid;
+	background-color: #AABBBB;
+}
+
+.leftPanel {
+	background-color: #AABBBB;
+	float: left;
+	margin: 0 auto;
+	padding: 0 0 0 30px;
+	width: 155px;
+	position: fixed;
+	
+	top: 0px;
+	left: 0px;
+}
+
+.rightPanel {
+	position: absolute;
+	left: 190px;
+	float: left;
 }
