BUGFIX: fixed some CSS issues with the <li> tag. The css removed all line item styles instead of just the scenarios.
git-svn-id: http://svn.silverstripe.com/modules/regress@97656 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -5,7 +5,7 @@
 	margin: 0;
 	padding: 0;
 }
-.steps li {
+.steps li.scenario,.steps li.fail,.steps li.pass,.steps li.skip {
 	margin: 1em 0;
 	padding: 0.3em;
 	background-color: #EEE;
