--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -78,6 +78,12 @@ label.skip.selected {
 	height: 100px;
 }
 
+div.note {
+	padding-top: 10px;
+	margin-top: 10px;
+	border-top: 1px solid #A0A0A0;
+}
+
 ul#NoteDetail {
 	padding: 0;
 }
@@ -196,15 +202,39 @@ ul#NoteDetail .content {
 	padding-top: 25px;
 }
 
+
+.goodMsg {
+	color: #208020;
+}
+
+.badMsg {
+	color: #CC4422;
+}
+
 #statusmessage, .helptext {
 	font-size: 10px;
 }
 
 #statusmessage {
-	color: #FF0000;
 }
 
 div.reportheader div.content {
 	padding-left: 100px;
 }
 
+#form_actions_right a {
+	background-color: #C0C0C0;
+	border: 1px solid #000000;
+	float: left;
+	padding: 3px 15px;
+	font-size: 14px;
+	margin-right: 10px;
+}
+
+.changeable {
+	background-color: #D0F0D0;	
+}
+
+div.content {
+	margin-top: 30px;
+}
