ENHANCEMENT: CSS enhancements for the session-report.
git-svn-id: http://svn.silverstripe.com/modules/regress@99606 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -254,15 +254,18 @@ div.reportheader .content {
 }
 
 .resolutionAction {
-	font-size: 80%;
+	font-size: 1.2em;
 	background-color:#DDDDDD;
 	border:1px solid #000000;
-	height:25px;
 	text-align:center;
-	vertical-align:middle;
-	width:150px;
-	padding-top: 3px;
+	width:200px;
 	margin-top: 3px;
+}
+
+.resolutionButton {
+	padding-top: 3px;
+	padding-bottom: 5px;
+	vertical-align: middle;
 }
 
 .stepresultnote {
@@ -281,5 +284,3 @@ div.reportheader .content {
 fieldset {
 	border: 0px;
 }
-
-
