ENHANCEMENT: SC#32: add silverstripe logo to left panel, add help text for with link to markdown syntax website.
git-svn-id: http://svn.silverstripe.com/modules/regress@99836 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -219,6 +219,11 @@ div .actions {
 	font-size: 10px;
 }
 
+#statusmessage ul {
+	padding-left: 10px;
+	text-align: left;
+}
+
 #statusmessage {
 }
 
