MINOR: minor typography change
git-svn-id: http://svn.silverstripe.com/modules/regress@101648 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -1,5 +1,5 @@
-.typography {
-	font-family: Trebuchet MS;
+.typography * {
+	font-family: Arial, "Trebuchet MS", sans-serif;
 	font-size: 1em;
 	color: #222;
 }
