MINOR: minor style change
git-svn-id: http://svn.silverstripe.com/modules/regress@101685 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -207,6 +207,10 @@ ul#NoteDetail .content {
 	bottom: 0px;
 }
 
+	a.editModeLink {
+		font-size: 1.2em;
+	}
+	
 	/* Form */
 	.leftPanel form input.action {
 		width: 120px;
