--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -17,7 +17,13 @@ textarea {
 input {
 	margin-bottom: 5px;
 }
-/* ----------------------- */
+
+/* CMS 
+-------------------------------------------------------------- */
+html #URLSegment {
+	display: none;
+}
+
 .pageTitle {
 	font-size: 1.5em;
 	margin-bottom: 30px;
