--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -24,6 +24,61 @@ html #URLSegment {
 	display: none;
 }
 
+/* -------------------------------------------------------------- */
+
+
+/* Table of Content 
+-------------------------------------------------------------- */
+#tableOfContent {
+	display: none;
+	border: 1px #CCC solid;
+	background-color: #E0E0FF;
+	float: left;
+	margin: 0 auto;
+	padding: 0 15px 0 15px;
+	width: 155px;
+	position: fixed;
+	
+	top: 0px;
+	left: 0px;
+	bottom: 0px;
+}
+
+#tableOfContent h3 {
+	margin-bottom: 0.6em;
+}
+
+#tableOfContent ul {
+	padding-left: 0;
+	margin-top: 0;
+}
+
+#tableOfContent li {
+	text-align: left;
+	margin-left: 10px;
+}
+
+#tableOfContent li a {
+	font-size: 12px;
+	text-decoration: none;
+}	
+
+#tableOfContent li a:hover {
+	text-decoration: underline;
+}
+
+p.showHideIndex {
+	margin-top: 0;
+	text-align: center;
+}
+
+p.showHideIndex a {
+	text-decoration: none;
+	color: #0081C3;
+	font-size: 12px;
+}
+/* -------------------------------------------------------------- */ 
+
 .pageTitle {
 	font-size: 1.5em;
 	margin-bottom: 30px;
