ENHANCEMENT: added ability to export a test-plan as plain HTML (without form details). added test-plan version and status as well.
git-svn-id: http://svn.silverstripe.com/modules/regress@117472 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -504,7 +504,7 @@ fieldset {
 	margin-top: 0px;
 }
 
-.index_scenarios .steps li.scenario,.steps li.fail,.steps li.pass,.steps li.skip {
+.index_scenarios .steps li.scenario, .index_scenarios .steps li.fail, .index_scenarios .steps li.pass, .index_scenarios .steps li.skip {
 	background-color: #FFF;
 	border: 1px #EEE solid;
 }
