ENHANCEMENT: added severity into test result and fixed small anchor issue when adding a comment.
git-svn-id: http://svn.silverstripe.com/modules/regress@117601 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -536,3 +536,14 @@ fieldset {
 	float: left;
 	width: 91%;
 }
+
+.resulttable th {
+	background-color: #EEE;
+	text-align: center;
+	padding: 5px;
+}
+
+.resulttable td {
+	padding: 5px;
+	text-align: center;
+}
