ENHANCEMENT: Added add test step
git-svn-id: http://svn.silverstripe.com/modules/regress@117710 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/trunk/css/TestPlan.css
+++ b/trunk/css/TestPlan.css
@@ -620,3 +620,11 @@ li.featureSecondLevel {
 	font-size:0.9em;
 	float: left;
 }
+
+.newStepInput {
+	width:99%;
+}
+
+/*.addStepButton {
+	float:right;
+}*/
